--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="monetag" content="a3c57cf46ce1fca50ba0602030f43e2c">
     <title>Earning Website</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
